# Seminario_Grupo5

./: .gitignore  ACTUALIZACION_DOCUMENTACION.md  ANALISIS_DEFENSA.md  CHEATSHEET.md  COMO_LEVANTAR.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_REORGANIZATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENVIRONMENT_CONFIG.md  GUIA_PRESENTACION.md  GUIA_PRESENTACION_3EXPONENTES.md  INDICE_DOCUMENTOS.md  PREGUNTAS_Y_RESPUESTAS.md  README.md  RECOMENDACIONES_FINALES.md  RESUMEN_EJECUTIVO.md  RESUMEN_FINAL.md  VISUAL_RESUMEN.md  check-ports.ps1  check-ports.sh  deploy.ps1  deploy.sh  main.py  pyproject.toml  railway.json  render.yaml  test_api_client.py  test_compatibility.py
.github/workflows/: deploy.yml
.streamlit/: secrets.toml
api/: __init__.py  main.py  schemas.py  simple_api.py  simple_api_fixed.py
api/routes/: advanced_analytics.py  dashboard_support.py  financials_route.py
dataset/: dataset.xlsx  ~$dataset.xlsx
doc/defensa/: CHECKLIST_DEFENSA.md  COMO_LEVANTAR.md  GUIA_PRESENTACION_3EXPONENTES.md  INDICE_DOCUMENTOS.md  QA_ESPERADAS_DEFENSA.md  RESUMEN_RAPIDO_DEFENSA.md  SINCRONIZACION_3EXPONENTES.md
output/cleaned_data/: BALANCE %.csv  BALANCE.csv  COMPOS CART %.csv  COMPOS CART.csv  Final Dataframe.csv  INDICADORES.csv
scripts/: data_ingest.py  data_load.py  data_pipeline.py  data_processing.py  main.py
scripts/pipeline/: data_ingest.py  data_pipeline.py  data_processing.py  data_saving.py  main.py
scripts/visualizations/: data_loader.py  data_manager.py  data_transformation.py  generic.py  indicator_config.py  main.py  test_csv_load.py  (+2 more)
(+10 files in other folders)
