[project]
name = "seminario-grupo5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.38.0",
]
