[project]
name = "seminario-grupo5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.1",
    "missingno>=0.5.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.38.0",
]
